Adding Coding4Fun toolkit, since I'm about to implement toasts

--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,9 @@ libpng/
 rapidjson/
 !rapidjson/rapidjson_readme.txt
 
-# Newtonsoft.Json, Windows Phone Toolkit
+# Newtonsoft.Json, Windows Phone Toolkit, Coding4Fun.Toolkit
 packages/
+Toolkit.Content/
 
 # Eclipse
 bin/
