WP8 is building again

--- a/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombsComp/BattleBombsComp.vcxproj
+++ b/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombsComp/BattleBombsComp.vcxproj
@@ -223,14 +223,19 @@
     <ClInclude Include="..\..\..\..\..\core\game\GameEvent.h" />
     <ClInclude Include="..\..\..\..\..\core\game\GameListener.h" />
     <ClInclude Include="..\..\..\..\..\core\game\GameSession.h" />
-    <ClInclude Include="..\..\..\..\..\core\game\GameState.h" />
     <ClInclude Include="..\..\..\..\..\core\game\IceBall.h" />
     <ClInclude Include="..\..\..\..\..\core\game\IcePatch.h" />
     <ClInclude Include="..\..\..\..\..\core\game\InsideBlock.h" />
     <ClInclude Include="..\..\..\..\..\core\game\InsideBlockState.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\Map.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\MapBase.h" />
     <ClInclude Include="..\..\..\..\..\core\game\MapBorder.h" />
     <ClInclude Include="..\..\..\..\..\core\game\MapBorderType.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\MapFactory.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\MapGrasslands.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\MapMountains.h" />
     <ClInclude Include="..\..\..\..\..\core\game\MapSearchNode.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\MapSpace.h" />
     <ClInclude Include="..\..\..\..\..\core\game\PathFinder.h" />
     <ClInclude Include="..\..\..\..\..\core\game\PlayerActionState.h" />
     <ClInclude Include="..\..\..\..\..\core\game\PlayerDynamicGameObject.h" />
@@ -256,6 +261,20 @@
     <ClInclude Include="..\..\..\..\..\core\game\ui\DPadControlState.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\GameButton.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\GameScreen.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameState.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameStateConnectionErrorWaitingForInput.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameStateCountingDown.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameStateCountingDownOffline.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameStateEnding.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameStateEndingOffline.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameStateFactory.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameStateRunning.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameStateRunningOffline.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameStateSpectating.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameStateSpectatingOffline.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameStateWaitingForConnection.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameStateWaitingForLocalSettings.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\GameStateWaitingForServer.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\InterfaceOverlay.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\MiniMapGridType.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\PlayerAvatar.h" />
@@ -321,8 +340,14 @@
     <ClCompile Include="..\..\..\..\..\core\game\IceBall.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\IcePatch.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\InsideBlock.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\Map.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\MapBase.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\MapBorder.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\MapFactory.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\MapGrasslands.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\MapMountains.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\MapSearchNode.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\MapSpace.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\PathFinder.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\PlayerDynamicGameObject.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\PowerUp.cpp" />
@@ -336,6 +361,20 @@
     <ClCompile Include="..\..\..\..\..\core\game\ui\DPadControl.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\GameButton.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\GameScreen.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameState.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameStateConnectionErrorWaitingForInput.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameStateCountingDown.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameStateCountingDownOffline.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameStateEnding.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameStateEndingOffline.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameStateFactory.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameStateRunning.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameStateRunningOffline.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameStateSpectating.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameStateSpectatingOffline.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameStateWaitingForConnection.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameStateWaitingForLocalSettings.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\GameStateWaitingForServer.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\InterfaceOverlay.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\PlayerAvatar.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\PlayerRow.cpp" />
