--- a/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombsComp/BattleBombsComp.vcxproj
+++ b/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombsComp/BattleBombsComp.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="..\..\..\..\..\core\framework\direct3d\PlatformHelpers.h" />
     <ClInclude Include="..\..\..\..\..\core\framework\DynamicGameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\framework\DynamicGridGameObject.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\FlagUtil.h" />
     <ClInclude Include="..\..\..\..\..\core\framework\GameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\framework\GridGameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\framework\Line.h" />
@@ -205,10 +206,15 @@
     <ClInclude Include="..\..\..\..\..\core\framework\ui\TextureWrapper.h" />
     <ClInclude Include="..\..\..\..\..\core\framework\ui\TouchEvent.h" />
     <ClInclude Include="..\..\..\..\..\core\framework\Vector2D.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\BaseTile.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\BaseTileState.h" />
     <ClInclude Include="..\..\..\..\..\core\game\BombGameObject.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\BotDifficulty.h" />
     <ClInclude Include="..\..\..\..\..\core\game\BotPlayerDynamicGameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\game\BreakableBlock.h" />
     <ClInclude Include="..\..\..\..\..\core\game\BreakableBlockState.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ChosenBotFlags.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ChosenPowerUpFlags.h" />
     <ClInclude Include="..\..\..\..\..\core\game\Crater.h" />
     <ClInclude Include="..\..\..\..\..\core\game\direct3d\Direct3DGameScreen.h" />
     <ClInclude Include="..\..\..\..\..\core\game\direct3d\Direct3DRenderer.h" />
@@ -227,6 +233,8 @@
     <ClInclude Include="..\..\..\..\..\core\game\IcePatch.h" />
     <ClInclude Include="..\..\..\..\..\core\game\InsideBlock.h" />
     <ClInclude Include="..\..\..\..\..\core\game\InsideBlockState.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\Landmine.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\LandmineState.h" />
     <ClInclude Include="..\..\..\..\..\core\game\Map.h" />
     <ClInclude Include="..\..\..\..\..\core\game\MapBase.h" />
     <ClInclude Include="..\..\..\..\..\core\game\MapBorder.h" />
@@ -243,6 +251,9 @@
     <ClInclude Include="..\..\..\..\..\core\game\PlayerState.h" />
     <ClInclude Include="..\..\..\..\..\core\game\PowerUp.h" />
     <ClInclude Include="..\..\..\..\..\core\game\PowerUpType.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\RegeneratingDoor.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\RemoteBomb.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\RemoteBombState.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ResourceConstants.h" />
     <ClInclude Include="..\..\..\..\..\core\game\SpaceTile.h" />
     <ClInclude Include="..\..\..\..\..\core\game\SpaceTileState.h" />
@@ -253,12 +264,16 @@
     <ClInclude Include="..\..\..\..\..\core\game\ui\ButtonState.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\CountDownNumberGameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\CountDownNumberType.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\DetonateButton.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\DetonateButtonState.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\DisplayGameOverGameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\DisplayGameOverType.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\DisplayXMovingGameObject.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\DisplayXMovingType.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\DPadControl.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\DPadControlState.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\EnableBotButton.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\EnablePowerUpButton.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\GameButton.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\GameScreen.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\GameState.h" />
@@ -286,6 +301,7 @@
     <ClInclude Include="..\..\..\..\..\core\game\ui\ScreenState.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\SpectatorControls.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\SpectatorControlState.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ui\StartButton.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\WaitingForLocalSettingsInterface.h" />
     <ClInclude Include="..\..\..\..\..\core\game\ui\WaitingForServerInterface.h" />
     <ClInclude Include="BasicTimer.h" />
@@ -325,6 +341,7 @@
     <ClCompile Include="..\..\..\..\..\core\framework\ui\TextureRegion.cpp" />
     <ClCompile Include="..\..\..\..\..\core\framework\ui\TouchEvent.cpp" />
     <ClCompile Include="..\..\..\..\..\core\framework\Vector2D.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\BaseTile.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\BombGameObject.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\BotPlayerDynamicGameObject.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\BreakableBlock.cpp" />
@@ -340,6 +357,7 @@
     <ClCompile Include="..\..\..\..\..\core\game\IceBall.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\IcePatch.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\InsideBlock.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\Landmine.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\Map.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\MapBase.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\MapBorder.cpp" />
@@ -351,14 +369,19 @@
     <ClCompile Include="..\..\..\..\..\core\game\PathFinder.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\PlayerDynamicGameObject.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\PowerUp.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\RegeneratingDoor.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\RemoteBomb.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\SpaceTile.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\ActiveButton.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\Assets.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\BombButton.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\CountDownNumberGameObject.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\DetonateButton.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\DisplayGameOverGameObject.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\DisplayXMovingGameObject.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\DPadControl.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\EnableBotButton.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\EnablePowerUpButton.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\GameButton.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\GameScreen.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\GameState.cpp" />
@@ -383,6 +406,7 @@
     <ClCompile Include="..\..\..\..\..\core\game\ui\PowerUpBarItem.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\Renderer.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\SpectatorControls.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\ui\StartButton.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\WaitingForLocalSettingsInterface.cpp" />
     <ClCompile Include="..\..\..\..\..\core\game\ui\WaitingForServerInterface.cpp" />
     <ClCompile Include="Direct3DContentProvider.cpp" />
