Revert "Adding crash email support"
This reverts commit fa219fcaa0e99f5df5340b1a35af23437034d7a9.

--- a/src/platform/server/nbproject/project.properties
+++ b/src/platform/server/nbproject/project.properties
@@ -34,7 +34,6 @@ file.reference.AppWarpS2.jar=libs\\AppWarpS2.jar
 file.reference.commons-lang-2.6.jar=libs\\commons-lang-2.6.jar
 file.reference.hsqldb.jar=libs\\hsqldb.jar
 file.reference.javassist-3.11.0.GA.jar=libs\\javassist-3.11.0.GA.jar
-file.reference.javax.mail.jar=libs\\javax.mail.jar
 file.reference.json-org.jar=libs\\json-org.jar
 file.reference.jzlib-1.0.7.jar=libs\\jzlib-1.0.7.jar
 file.reference.logback-classic-1.0.13.jar=libs\\logback-classic-1.0.13.jar
@@ -59,8 +58,7 @@ javac.classpath=\
     ${file.reference.ognl-3.0.1.jar}:\
     ${file.reference.slf4j-api-1.7.5.jar}:\
     ${file.reference.spring-beans-3.2.0.M1.jar}:\
-    ${file.reference.tomcat-apr-5.5.23.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.tomcat-apr-5.5.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
