--- a/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombs/BattleBombs.csproj
+++ b/src/platform/windows-phone/BattleBombs/BattleBombs/BattleBombs/BattleBombs.csproj
@@ -342,12 +342,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="README_FIRST.txt" />
-    <Content Include="Toolkit.Content\ApplicationBar.Cancel.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Toolkit.Content\ApplicationBar.Check.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Toolkit.Content\ApplicationBar.Cancel.png" />
+    <Content Include="Toolkit.Content\ApplicationBar.Check.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BattleBombsComp\BattleBombsComp.vcxproj">
